infrastructure/longhorn/service-patch.yml
apiVersion: v1
kind: Service
metadata:
  name: longhorn-frontend
  annotations:
    metallb.io/loadBalancerIPs: 10.1.16.5
spec:
  type: LoadBalancer
